<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor_detector</name>
  <version>2.0.0</version>
  <description>RoboMaster armor detector.</description>
  <maintainer email="defateyz@gmail.com">Zheng Yu</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/FaterYU/rm_auto_aim</url>
  <url type="bugtracker">https://github.com/FaterYU/rm_auto_aim/issues</url>
  <author email="defateyz@gmail.com">Zheng Yu</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- depend: build, export, and execution dependency -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>vision_opencv</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
