<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_auto_aim</name>
  <version>2.0.0</version>
  <description>RoboMaster armor auto aim.</description>
  <maintainer email="defateyz@gmail.com">Zheng Yu</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/FaterYU/rm_auto_aim</url>
  <url type="bugtracker">https://github.com/FaterYU/rm_auto_aim/issues</url>
  <author email="defateyz@gmail.com">Zheng Yu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>auto_aim_interfaces</depend>
  <depend>armor_detector</depend>
  <depend>armor_tracker</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
